k8n/base/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: pgadmin-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
